--- a/index.html
+++ b/index.html
@@ -2,42 +2,62 @@
 
 <html lang="en">
 
-  <head>
+<head>
 
-  	<title>NASA postcards</title>
+	<title>NASA postcards</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="style.css" rel="stylesheet" type="text/css"/>
 
-  </head>
+</head>
 
-  <body>
+<body>
+
+<div class="container">
+
+
+		<h1>Nasa postcards APOD</h1>
+
+		<form id="js-form">
+			<label for="search-date">Enter a date (YYYY-MM-DD):</label>
+			<input type="text" name="search-date" id="js-search-date" required><br>
+
+
+			<input type="submit" value="Go!">
+		</form>
+
+</div>
+
+		<ul>
+		<div class="flex-container">
+			
+			<li><div class="box1"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br><br> Donec risus ipsum, pulvinar non gravida vitae, auctor nec lorem. Integer tincidunt vitae dui at dictum.</div></li>
+
+			<li><div class="box2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br><br> Donec risus ipsum, pulvinar non gravida.</div></li>
+
+			<li><div class="box3">Donec in eros commodo, <br>porttitor leo sagittis, viverra est.<br> Donec aliquam tempor diam, <br>vehicula vestibulum justo <br>commodo sed.<br><br><br><br><br><br><br><br><br><br><br><br>Curabitur porta viverra tellus sit amet. </div></li>
+
+			<li><div class="box4">Lorem Ipsum</div></li>
+
+		</div>
+		</ul>
+		
 
 	<div class="container">
 
-	        <h1>Nasa postcards APOD</h1>
-
-	        <form id="js-form">
-	            <label for="search-date">Enter a date (YYYY-MM-DD):</label>
-	            <input type="text" name="search-date" id="js-search-date" required><br>
-
-
-	            <input type="submit" value="Go!">
-	        </form>
-
-	        <p id="js-error-message" class="error-message"></p>
-	        <section id="results" class="hidden">
-	          <h2>Picture of the day</h2>
-	          <ul id="results-list">
-	          </ul>
-	        </section>
-	    </div>
+		<p id="js-error-message" class="error-message"></p>
+		<section id="results" class="hidden">
+			<h2>Picture of the day:</h2>
+			<ul id="results-list">
+			</ul>
+		</section>
+	</div>
 
 
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+	<script src="script.js"></script>
 
-  </body>
+</body>
 
 </html>
