--- a/template.html
+++ b/template.html
@@ -2,21 +2,38 @@
 
 <html lang="en">
 
-  <head>
+<head>
 
-  	<title>NASA postcards</title>
+ <title>NASA postcards</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="style.css" rel="stylesheet" type="text/css"/>
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-  	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <img src="https://images.wallpaperscraft.com/image/milky_way_starry_sky_stars_128523_300x168.jpg" width="100%" height="250px">
 
-  </body>
+
+  <form id="userContent">
+
+
+    <textarea name="content" form="userContent" placeholder="Enter content here..."></textarea>
+
+  </form>
+
+
+  <div class="send-to">
+    <a href="mailto:name@email.com">Send</a>
+  </div>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+
+</body>
 
 </html>
