--- a/template.html
+++ b/template.html
@@ -15,15 +15,17 @@
 <body>
 
   <img src="https://images.wallpaperscraft.com/image/milky_way_starry_sky_stars_128523_300x168.jpg" width="100%" height="250px">
+<div>
+  <p id="content"></p>
+</div>
 
 
   <form id="userContent">
 
 
-    <textarea name="content" form="userContent" placeholder="Enter content here..."></textarea>
+    <textarea name="content" form="userContent" placeholder="Enter content here..." onkeyup="setText(this)"></textarea>
 
   </form>
-
 
   <div class="send-to">
     <a href="mailto:name@email.com">Send</a>
