background img property

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 	<ul>
 		<div class="flex-container">
 
-			<li><div class="box1"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br> Donec risus ipsum, pulvinar non gravida vitae, auctor nec lorem. Integer tincidunt vitae dui at dictum.</div></li>
+			<li><a href="template.html"><div class="box1"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br> Donec risus ipsum, pulvinar non gravida vitae, auctor nec lorem. Integer tincidunt vitae dui at dictum.</div></a></li>
 
-			<li><div class="box2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br><br> Donec risus ipsum, pulvinar non gravida.</div></li>
 
-			<li><div class="box3">Donec in eros commodo, <br>porttitor leo sagittis, viverra est.<br> Donec aliquam tempor diam, <br>vehicula vestibulum justo <br>commodo sed.<br><br><br><br><br><br><br><br><br><br><br>Curabitur porta viverra tellus sit amet. </div></li>
+			<li><a href="template.html"><div class="box2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br><br> Donec risus ipsum, pulvinar non gravida.</div></a></li>
 
-			<li><div class="box4">Lorem Ipsum</div></li>
+			<li><a href="template.html"><div class="box3">Donec in eros commodo, <br>porttitor leo sagittis, viverra est.<br> Donec aliquam tempor diam, <br>vehicula vestibulum justo <br>commodo sed.<br><br><br><br><br><br><br><br><br><br><br>Curabitur porta viverra tellus sit amet.</div> </a></li>
+
+			<li><a href="template.html"><div class="box4">Lorem Ipsum</div></a></li>
 
 		</div>
 	</ul>
