--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
 			<input type="submit" value="Go!">
 		</form>
 
+
+
+		<p id="js-error-message" class="error-message"></p>
+		<section id="results" class="results hidden">
+			<h2>Choose a template:</h2>
+		</section>
+
+		
 	</div>
+
+
 
 	<ul>
 		<div class="flex-container">
@@ -43,17 +53,6 @@
 
 		</div>
 	</ul>
-	
-
-	<div class="container">
-
-		<p id="js-error-message" class="error-message"></p>
-		<section id="results" class="hidden">
-			<h2>Picture of the day:</h2>
-			<ul id="results-list">
-			</ul>
-		</section>
-	</div>
 
 
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
