--- a/template.html
+++ b/template.html
@@ -15,14 +15,38 @@
 <body>
 
   <img src="https://images.wallpaperscraft.com/image/milky_way_starry_sky_stars_128523_300x168.jpg" width="100%" height="250px">
-<div>
-  <p id="content"></p>
+  <div>
+    <p id="content"></p>
+  </div>
+
+<div class="dropdown">
+  <select id = "fonts">
+    <option value="fonts">Fonts</option>
+    <option value = "arial">Arial</option>
+    <option value = "courier">Courier</option>
+    <option value = "roboto">Roboto</option>
+    <option value = "times-new-roman">Times New Roman</option>
+  </select>
+
+  <select id = "Size">
+    <option value="Size">Size</option>
+    <option value = "10">10</option>
+    <option value = "15">15</option>
+    <option value = "20">20</option>
+    <option value = "25">25</option>
+  </select>
+
+   <select id = "Color">
+    <option value="color">Color</option>
+    <option value = "blue">Blue</option>
+    <option value = "red">Red</option>
+    <option value = "white">White</option>
+    <option value = "black">Black</option>
+  </select>
 </div>
 
 
-
   <form id="userContent">
-
 
     <textarea name="content" form="userContent" placeholder="Enter content here..." onkeyup="setText(this)"></textarea>
 
