user can control style

--- a/template.html
+++ b/template.html
@@ -14,21 +14,26 @@
 
 <body>
 
+
   <img src="https://images.wallpaperscraft.com/image/milky_way_starry_sky_stars_128523_300x168.jpg" width="100%" height="250px">
+
+
+
   <div>
     <p id="content"></p>
   </div>
 
-<div class="dropdown">
+
+<form class="dropdown">
   <select id = "fonts">
-    <option value="fonts">Fonts</option>
+    <option value="Fonts">Fonts</option>
     <option value = "arial">Arial</option>
     <option value = "courier">Courier</option>
     <option value = "roboto">Roboto</option>
     <option value = "times-new-roman">Times New Roman</option>
   </select>
 
-  <select id = "Size">
+  <select id = "size">
     <option value="Size">Size</option>
     <option value = "10">10</option>
     <option value = "15">15</option>
@@ -36,14 +41,14 @@
     <option value = "25">25</option>
   </select>
 
-   <select id = "Color">
+   <select id = "color">
     <option value="color">Color</option>
     <option value = "blue">Blue</option>
     <option value = "red">Red</option>
     <option value = "white">White</option>
     <option value = "black">Black</option>
   </select>
-</div>
+</form>
 
 
   <form id="userContent">
