--- a/template.html
+++ b/template.html
@@ -24,13 +24,13 @@
   </div>
 
 
-<form class="dropdown">
+<div class="dropdown">
   <select id = "fonts">
     <option value="Fonts">Fonts</option>
     <option value = "arial">Arial</option>
     <option value = "courier">Courier</option>
     <option value = "roboto">Roboto</option>
-    <option value = "times-new-roman">Times New Roman</option>
+    <option value = "Times New Roman">Times New Roman</option>
   </select>
 
   <select id = "size">
@@ -48,7 +48,13 @@
     <option value = "white">White</option>
     <option value = "black">Black</option>
   </select>
-</form>
+
+  <select id = "align">
+    <option value="center">Center</option>
+    <option value = "left">Left</option>
+    <option value = "right">Right</option>
+  </select>
+</div>
 
 
   <form id="userContent">
