took away align

--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
 				<option value = "blue">Blue</option>
 				<option value = "purple">Purple</option>
 			</select>
-
+<!--
 			<select id = "align">
 				<option value="align">Align</option>
 				<option value="center">Center</option>
 				<option value = "left">Left</option>
-				<option value = "right">Right</option>
+				<option value = "bottom-right">Right</option>
 			</select>
+-->
 		</div>
 
 		<h3>Enter content here:</h3>
