image shows on 2nd page but text broke

--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
 
 
 		</div>
+</div>
+	<div class="newPage">
 
 		<div class="flex-container">
 
-			<li><div class="box hidden">Click here to design your own card!</div></li>
+			<li><div class="box hidden"><h5>Click here to design your own card!</h5></div></li>
 
 		</div>
-	</div>
-
+</div>
 
 	<div class="newPage hidden">
 
+
 		<div class="relative">
-			<img class="image-text" src="https://images.wallpaperscraft.com/image/milky_way_starry_sky_stars_128523_300x168.jpg" width="450px" height="320px">
 			<p id="content"></p>
 		</div>
 
