--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 			</form>
 
 
-
 			<p id="js-error-message" class="error-message"></p>
 			<section id="results" class="results hidden">
 				<h2>This is the Astronomy Picture of that day:</h2>
@@ -39,23 +38,17 @@
 
 
 		</div>
-</div>
+	</div>
 	<div class="newPage">
 
 		<div class="flex-container">
 
 			<li><div class="box hidden"><h5>Click here to design your own card!</h5></div></li>
-
+			<p id="content" class="hidden"></p>
 		</div>
-</div>
+	</div>
 
 	<div class="newPage hidden">
-
-
-		<div class="relative">
-			<p id="content"></p>
-		</div>
-
 
 
 		<div class="dropdown">
@@ -101,24 +94,24 @@
 				<option value = "left">Left</option>
 				<option value = "bottom-right">Right</option>
 			</select>
--->
-		</div>
-
-		<h3>Enter content here:</h3>
-		<form id="userContent">
-
-			<textarea name="content" form="userContent" placeholder="Enter content here..." onkeyup="setText(this)"></textarea>
-
-		</form>
-
-		<div class="send-to">
-			<a href="mailto:name@email.com">Send</a>
-		</div>
-
+		-->
 	</div>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-	<script src="script.js"></script>
+	<h3>Enter content here:</h3>
+	<form id="userContent">
+
+		<textarea name="content" form="userContent" placeholder="Enter content here..." onkeyup="setText(this)"></textarea>
+
+	</form>
+
+	<div class="send-to">
+		<a href="mailto:name@email.com">Send</a>
+	</div>
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 
 </body>
 
