--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 			<section id="results" class="results hidden">
 				<h2>This is the Astronomy Picture of that day:</h2>
 			</section>
-
-
 		</div>
+
 	</div>
+
 	<div class="newPage">
 
 		<div class="flex-container">
@@ -46,7 +46,11 @@
 			<li><div class="box hidden"><h5>Click here to design your own card!</h5></div></li>
 			<p id="content" class="hidden"></p>
 		</div>
+
 	</div>
+
+		<p class="explanation hidden"></p>
+
 
 	<div class="newPage hidden">
 
@@ -97,7 +101,6 @@
 		-->
 	</div>
 
-	<h3>Enter content here:</h3>
 	<form id="userContent">
 
 		<textarea name="content" form="userContent" placeholder="Enter content here..." onkeyup="setText(this)"></textarea>
