--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 
 	</div>
 
-		<p class="explanation hidden"></p>
+	<div class="removePage">
 
+		<p class="explanation"></p>
 
+	</div>
 	<div class="newPage hidden">
 
 
@@ -91,7 +93,7 @@
 				<option value = "blue">Blue</option>
 				<option value = "purple">Purple</option>
 			</select>
-<!--
+		<!--
 			<select id = "align">
 				<option value="align">Align</option>
 				<option value="center">Center</option>
@@ -101,15 +103,15 @@
 		-->
 	</div>
 
+			<button type="button">Send!</button>
+
+
 	<form id="userContent">
 
 		<textarea name="content" form="userContent" placeholder="Enter content here..." onkeyup="setText(this)"></textarea>
 
 	</form>
 
-	<div class="send-to">
-		<a href="mailto:name@email.com">Send</a>
-	</div>
 
 </div>
 
