send string added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<div class="removePage">
+	<section class="removePage">
 		<div class="container">
 
 
@@ -37,27 +37,30 @@
 			</section>
 		</div>
 
-	</div>
+	</section>
 
-	<div class="newPage">
+	<section class="newPage">
 
 		<div class="flex-container">
 
 			<li><div class="box hidden"><h5>Click here to design your own card!</h5></div></li>
 			<p id="content" class="hidden"></p>
 		</div>
+		<div class="send-here">
+		</div>
 
-	</div>
+	</section>
 
-	<div class="removePage">
+	<section class="removePage">
 
 		<p class="explanation"></p>
 
-	</div>
-	<div class="newPage hidden">
+	</section>
+
+	<section class="newPage hidden">
 
 
-		<div class="dropdown">
+		<section class="dropdown">
 			<select id = "fonts">
 				<option value="Fonts">Fonts</option>
 				<option value = "arial">Arial</option>
@@ -101,7 +104,7 @@
 				<option value = "bottom-right">Right</option>
 			</select>
 		-->
-	</div>
+	</section>
 
 			<button type="button">Send!</button>
 
@@ -113,7 +116,7 @@
 	</form>
 
 
-</div>
+</section>
 
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <script src="script.js"></script>
