--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<h1>Nasa postcards APOD</h1>
 
 			<form id="js-form">
-				<label for="search-date">Enter a date (YYYY-MM-DD):</label>
+				<label for="search-date">Enter a date (after June 1995) and use this format: YYYY-MM-DD</label>
 				<input type="text" name="search-date" id="js-search-date" required><br>
 
 
