--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 			<h1>Nasa postcards APOD</h1>
 
 			<form id="js-form">
-				<label for="search-date">Enter a date (after June 1995) and use this format: YYYY-MM-DD</label>
+				<label for="search-date">Enter a date ( YYYY-MM-DD): <br> </label>
+				<h6> Make sure it's after June 1995</h6>
 				<input type="text" name="search-date" id="js-search-date" required><br>
 
 
@@ -46,10 +47,11 @@
 			<li><div class="box hidden"><h5>Click here to design your own card!</h5></div></li>
 			<p id="content" class="hidden"></p>
 		</div>
-		<div class="send-here">
-		</div>
 
 	</section>
+
+	<div class="send-here">
+		</div>
 
 	<section class="removePage">
 
