--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 
+
 </head>
 
 <body>
@@ -51,7 +52,7 @@
 	</section>
 
 	<div class="send-here">
-		</div>
+	</div>
 
 	<section class="removePage">
 
@@ -69,14 +70,16 @@
 				<option value="comic sans ms">Comic Sans MS</option>
 				<option value = "courier">Courier</option>
 				<option value = "georgia">Georgia</option>
-				<option value = "verdana">Verdana</option>
+				<option value="roboto">Roboto</option>
 				<option value ="tahoma">Tahoma</option>
 				<option value = "times new roman">Times New Roman</option>
+				<option value = "verdana">Verdana</option>
+
 
 			</select>
 
 			<select id = "size">
-				<option value="Size">Size</option>
+				<option value="size">Size</option>
 				<option value = "10">10</option>
 				<option value = "13">13</option>
 				<option value = "15">15</option>
@@ -108,7 +111,7 @@
 		-->
 	</section>
 
-			<button type="button">Send!</button>
+	<button type="button">Send!</button>
 
 
 	<form id="userContent">
