language and catch error fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 			<h1>Nasa postcards APOD</h1>
-			<h3>Send your loved one a unique, personalized astronimcal postcard.</h3>
+			<h3>Send your friends unique, personalized astronimcal postcards.</h3>
 
 			<form id="js-form">
 				<label for="search-date">Enter a date ( YYYY-MM-DD): <br> </label>
