--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h3>Send your friends unique, personalized astronimcal postcards.</h3>
 
 			<form id="js-form">
-				<label for="search-date">Enter a date ( YYYY-MM-DD): <br> </label>
+				<label for="js-search-date">Enter a date ( YYYY-MM-DD): <br> </label>
 				<h6> Make sure it's after June 1995</h6>
 				<input type="text" name="search-date" id="js-search-date" required><br>
 
